app/page.module.css
.container {
  max-width: 1200px;
  width: 100%;
  padding: 0 80px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.headerWrapper, .footerWrapper {
    width: 100%;
    display: flex;
    justify-content: center;
}

.headerWrapper {
    border-bottom: 1px solid #FFFFFF26;
}

.footerWrapper {
    border-top: 1px solid #FFFFFF26;
    flex-direction: column;
    align-items: center;
}

.footerText {
    font-family: var(--font-inter);
    font-size: 20px;
    font-weight: 600;
    line-height: 25px;
    text-align: center;
}

.footerSns {
  padding: 0 80px 21px 118px;
  align-self: start;
}

.header, .footer {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding: 21px 80px !important;
}

.footer {
  padding: 21px 80px 6px 80px !important;
  width: initial;
}

.headerText, .footerText {
  font-family: var(--font-inter-tight);
  font-size: 18px;
  font-weight: 600;
  line-height: 22px;
  text-align: left;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

.link {
  font-family: var(--font-inter-tight);
  font-size: 15px;
  font-weight: 500;
  line-height: 15px;
  position: relative;
  background: radial-gradient(391.22% 251.68% at 137.8% 49.99%, #C4FF1E 0%, #007AFF 59.22%);
  background-clip: text;
  -webkit-background-clip: text;
  color: white;
  transition: 0.3s ease-out;
}

.link:after {
  content: '';
  width: 0;
  height: 1px;
  background: radial-gradient(391.22% 251.68% at 137.8% 49.99%, #C4FF1E 0%, #007AFF 59.22%);
  position: absolute;
  bottom: -4px;
  left: 50%;
  transition: .3s ease-in-out;
  -webkit-transition: .3s ease-in-out;
}

.link:hover:after {
  width: 100%;
  left: 0;
  transition: .3s ease-out;
  -webkit-transition: .3s ease-in-out;
}

.link:hover {
  color: rgba(0,0,0,0);
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 280px;
  margin: 110px 0 280px 0;
}

.block {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  position: relative;
}

.tonVenturesLogoWrapper {
  position: relative;
  height: 28px;
  width: 187px;
}

.logoWrapper {
  position: relative;
  height: 78px;
  width: 100px;
}

.notcoin {
  font-family: var(--font-inter);
  font-size: 23px;
  font-weight: 600;
  line-height: 28px;
}

.notcoinFooter {
  font-family: var(--font-inter);
    font-size: 20px;
    font-weight: 600;
    line-height: 25px;
}

.telegramGaming {
  font-family: var(--font-inter-tight);
  font-size: 39px;
  font-weight: 600;
  line-height: 47px;
  text-align: left;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;

}

.accelerator {
  font-family: var(--font-inter-tight);
  font-size: 19px;
  font-weight: 500;
  line-height: 23px;
  letter-spacing: 0.51em;
  text-align: center;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
  color: #B19AD0;
  margin-top: 2px;
}

.title, .name {
  font-size: 50px;
  font-weight: 600;
  line-height: 60px;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

.subtitle {
  font-size: 40px;
  font-weight: 600;
  line-height: 48px;
  text-align: left;
  z-index: 2;
}

.text, .textSemibold, .firstGridBlock {
  font-size: 16px;
  font-weight: 500;
  line-height: 19px;
  text-align: left;
  z-index: 2;
}

.textCenter {
  text-align: center;
}

.textSemibold, .firstGridBlock {
    font-weight: 600;
}

.textBold {
  font-weight: 700 !important;
}

.textXl {
  font-family: var(--font-inter-tight);
  font-size: 20px;
  font-weight: 500;
  line-height: 24px;
  text-align: left;
}

.textXXL, .textXXLBold {
  font-size: 30px;
  font-weight: 500;
  line-height: 36px;
  text-align: left;
}

.textXXLBold {
  font-weight: 700;
}

.caption, .captionGreen {
  font-family: var(--font-inter-tight);
  font-size: 22px;
  font-weight: 600;
  line-height: 26px;
}

.textPurple {
  background: linear-gradient(90deg, #4146AE -7.19%, #9654F0 62.95%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.heroBackground {
  background: linear-gradient(178.68deg, rgba(0, 0, 0, 0) 30.74%, rgba(4, 11, 33, 0.17) 43.68%, #9654F0 106.84%);
}

.heroBgIcon {
  position: absolute;
  bottom: 64px;
  right: 0;
}

.hFull {
  min-height: calc(100vh - 77px - 110px - 120px);
  justify-content: center;
}

.box {
  border-radius: 10px;
  padding: 94px;
  background: linear-gradient(90deg, #4146AE -7.19%, #9654F0 73.2%, #9654F0 95.18%);
}

.w750 {
  max-width: 750px;
}

.w780 {
  max-width: 780px;
}

.z2 {
  z-index: 200;
}

.divider {
  width: 100%;
  border: 1px solid #FFFFFF80
}

.px174 {
  padding: 0 174px;
}

.pb125 {
  padding-bottom: 125px;
  width: 100%;
}

.pb255 {
  padding-bottom: 255px;
}

.pb280 {
  padding-bottom: 200px;
}

.mrM16 {
  margin-right: -16px;
}

.mt10 {
  margin-top: 10px;
}

.mt18 {
  margin-top: 18px;
}

.mt20 {
  margin-top: 20px;
}

.mt38 {
  margin-top: 38px;
}

.mt40 {
  margin-top: 40px;
}

.mt50 {
  margin-top: 50px;
}

.mt55 {
  margin-top: 55px;
}

.mt58 {
  margin-top: 58px;
}

.mt60 {
  margin-top: 60px;
}

.mt66 {
  margin-top: 66px;
}

.mt70 {
  margin-top: 70px;
}

.mt74 {
  margin-top: 74px;
}

.mt75 {
  margin-top: 75px;
}

.mt83 {
  margin-top: 83px;
}

.mt90 {
  margin-top: 90px;
}

.mt91 {
  margin-top: 91px;
}

.mt100 {
  margin-top: 100px;
}

.mt110 {
  margin-top: 110px;
}

.mt122 {
  margin-top: 122px;
}

.mt144 {
  margin-top: 140px;
}

.mt230 {
  margin-top: 230px;
}

.mt240 {
  margin-top: 240px;
}

.mx54 {
  margin: 0 54px;
}

.mxAuto {
  margin-left: auto;
  margin-right: auto;
}

.mAuto {
  margin: auto;
}

.pt110 {
  padding-top: 110px;
}

.flexRow {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  gap: 75px;
}

.flexWrap {
  flex-wrap: wrap;
}

.grid2 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 20px;
  width: 100%;
}

.rowGap30 {
  grid-row-gap: 30px;
}

.rowGap50 {
  grid-row-gap: 50px;
}

.colGap20 {
  grid-column-gap: 20px;
}
/* ... */

